--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.4.1
 crispy-tailwind==0.5.0
 Django==3.2.5
+django-cors-headers==3.8.0
 django-crispy-forms==1.12.0
 django-environ==0.4.5
 djangorestframework==3.12.4
